refactor and docs updated

--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* * {
+	height: 100%;
+} */
+
+html,
+body,
+:root {
+	height: 100%;
+}
